maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:41: error: ':' expected but ')' found.
def isDirFree(dir) : Boolean = {
                 ^PledgeMaze:49: error: identifier expected but '}' found.
}
^